//protocol=1517
option java_package = "com.chuangyou.common.protobuf.pb";
option java_outer_classname = "ChangeMapResultMsgProto";
import "map/PostionMsg.proto";
message ChangeMapResultMsg {
	optional int32 result = 1; //进入状态 该字段暂不处理
	optional int32 mapType = 2; //地图类型 该字段暂不处理
	optional PostionMsg postion = 3; //地图位置坐标
}
